deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-node-deployment
spec:
  replicas: 10
  selector:
    matchLabels:
      app: test-node
  template:
    metadata:
      labels:
        app: test-node
    spec:
      containers:
      - name: test-node-container
        image: lnahuel/node-argocd:6
        ports:
        - containerPort: 4000
